--- a/app/src/main/res/layout/content_food_finder.xml
+++ b/app/src/main/res/layout/content_food_finder.xml
@@ -8,12 +8,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/layout"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.johnteng.foodfinder.FoodFinder"
     tools:showIn="@layout/activity_food_finder">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:id="@+id/ll"
+        android:layout_alignParentStart="true"></LinearLayout>
 </RelativeLayout>
