--- a/app/src/main/res/layout/content_food_finder.xml
+++ b/app/src/main/res/layout/content_food_finder.xml
@@ -99,6 +99,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="URL:"
+                    android:textColor="@android:color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Food type:"
                     android:textColor="@android:color/black" />
                 <TextView
