Yelp parsing works + updates UI, need to work on Watson parsing and matrix

--- a/app/src/main/res/layout/content_food_finder.xml
+++ b/app/src/main/res/layout/content_food_finder.xml
@@ -115,6 +115,7 @@
                 <ImageView
                     android:layout_width="250dp"
                     android:layout_height="250dp"
+                    android:layout_marginTop="5dp"
                     android:id="@+id/imgBusiness"
                     android:layout_gravity="center"/>
             </LinearLayout>
