--- a/app/src/main/res/layout/content_food_finder.xml
+++ b/app/src/main/res/layout/content_food_finder.xml
@@ -48,16 +48,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Location:"
+                android:text="Location: "
                 android:id="@+id/tvLocation"
                 android:textColor="@android:color/black" />
 
-            <EditText
+            <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/edLoc"
+                android:id="@+id/tvCoord"
                 android:layout_weight="1"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:textColor="@android:color/black"/>
 
             <Button
                 android:layout_width="wrap_content"
@@ -85,31 +86,26 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name:"
                     android:id="@+id/tvName"
                     android:textColor="@android:color/black" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Price:"
                     android:id="@+id/tvPrice"
                     android:textColor="@android:color/black" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Address:"
                     android:id="@+id/tvAddress"
                     android:textColor="@android:color/black"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Telephone:"
                     android:id="@+id/tvTelephone"
                     android:textColor="@android:color/black" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Website:"
                     android:id="@+id/tvURL"
                     android:textColor="@android:color/black" />
                 <ImageView
